loja images responsive corrected, associacao responsive corrected, email changed in footer and nodemailers

--- a/client/src/components/Associacao/AssociacaoFront.css
+++ b/client/src/components/Associacao/AssociacaoFront.css
@@ -207,6 +207,9 @@
 }
 
 @media(max-width: 768px) {
+    .associacao {
+        padding: 0px;
+    }
     .fotosHistoria-texto {
         padding: 20px 40px;
         text-align: left !important;
