--- a/client/src/components/Loja/LojaMaster.css
+++ b/client/src/components/Loja/LojaMaster.css
@@ -8,10 +8,6 @@
     padding: 80px 0px 30px 0px;
 }
 
-/* .textoLoja{
-
-} */
-
 .loja{
     display: flex;
     flex-direction: row; 
@@ -63,13 +59,11 @@
 
 @media (max-width:768px){
     .fotoArtigos {
-        width: 150px;
-        height: 100px;
-        margin: 10px 0px; 
+        margin: 15px 0px 0px 0px; 
     }
     .artigosLoja{
         width: 150px;
-        height: 190px; 
+        height: 210px; 
         flex-direction: column;
         background-color: rgba(124, 182, 244, 0.1);
         border-radius: 10px;
