--- a/client/src/components/Jornal/Jornal.css
+++ b/client/src/components/Jornal/Jornal.css
@@ -17,8 +17,8 @@
 
 .textoIntroducao{
     padding-bottom: 10px;
-    padding-left: 550px;
-    padding-right: 550px;
+    max-width: 500px;
+    margin: 0px auto;
 }
 
 .oTrevo{
@@ -93,32 +93,8 @@
     width:20px;
     height: 20px
 }
-@media(max-width:1725px){
 
-    .textoIntroducao{
-        padding-left: 400px;
-        padding-right: 400px;
-    }
 
-}
-
-@media(max-width:1450px){
-
-    .textoIntroducao{
-        padding-left: 300px;
-        padding-right: 300px;
-    }
-
-}
-
-@media(max-width:1250px){
-
-    .textoIntroducao{
-        padding-left: 200px;
-        padding-right: 200px;
-    }
-
-}
 
 @media(max-width:1100px){
 
@@ -134,14 +110,6 @@
 
 }
 
-@media(max-width:900px){
-
-    .textoIntroducao{
-        padding-left: 150px;
-        padding-right: 150px;
-    }
-
-}
 
 @media(max-width:770px){
     .capa {
