--- a/client/src/components/Contactos/QueresSerGuia.css
+++ b/client/src/components/Contactos/QueresSerGuia.css
@@ -124,13 +124,14 @@
   }
   .guia-form-section input {
     width: 280px;
-    font-size: 16px;
+    font-size: 14px !important;
   }
   .guia-form-section form {
     padding: 40px 30px 20px 30px;
   }
   .guia-label {
     margin-bottom: 0px;
+    font-size: 14px;
   }
   .guia-megafone {
     width: 35%;
