moradas em tres linhas, console.log apagdos

--- a/client/src/components/Contactos/SedeNacional.css
+++ b/client/src/components/Contactos/SedeNacional.css
@@ -30,7 +30,8 @@
   margin-bottom: 10px;
 }
 
-.contactos-text {
+.contactos-text,
+.contactos-text a {
   width: 280px;
   font-weight: 500;
   font-size: 15px;
