--- a/client/src/components/Backoffice/Store/Store.css
+++ b/client/src/components/Backoffice/Store/Store.css
@@ -2,12 +2,12 @@
   margin: 0px;
 }
 
-.loja-quadro {
+.main-quadro {
   margin: 0px;
   align-items: center;
 }
 
-.loja-quadro-title {
+.main-quadro-title {
   color: #1aa3db;
   font-size: 20px;
   width: 69%;
