--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -2,18 +2,17 @@
   background: linear-gradient(120deg, #154a7f, #00A6DE);
   display: flex;
   width: 100%;
+  min-height: 143px;
 }
 
-.header-logo {
-  width: 400px;
-  margin-right: 0px;
-  margin-left: -20px;
-  background-image: url(../../assets/logo/logo_NEG_RGB.png);
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 120px;
+.navbar-brand {
   padding: 0px;
+  margin: 0px 0px 0px -20px;
+}
+
+.header-logo-image {
+  width: 400px;
+  height: 120px;
 }
 
 .header-toggler {
@@ -83,8 +82,15 @@
 }
 
 @media(max-width: 1091px) {
+  .navbar {
+    min-height: 110px;
+  }
   .header-logo {
     width: 300px;
+  }
+  .header-logo-image {
+    width: 300px;
+    height: 92px;
   }
   .header-toggler {
     margin-right: 0px;
