--- a/client/src/components/HistoriaGuidismo/HistoriaGuidismo.css
+++ b/client/src/components/HistoriaGuidismo/HistoriaGuidismo.css
@@ -13,7 +13,7 @@
 }
 
 .ComoTudoComecou {
-  padding-top: 50px;
+  padding: 50px 0px 15px 0px;
   display: block;
 }
 
@@ -107,7 +107,6 @@
   }
   .GuiasPorqueTextDiv {
     column-count: 1;
-    text-align: center;
   }
 
 }
