--- a/client/src/components/Jornal/Jornal.css
+++ b/client/src/components/Jornal/Jornal.css
@@ -74,16 +74,15 @@
     display: flex;
 }
 .capa{
-    height:100%;
-    width:40%;
+    width: 153px;
+    height: 216px;
+    margin: 0px 15px 0px 30px;
     cursor: pointer;
     display: flex;
     flex-direction: row;
-    margin-left: 30%;
 }
 .download{
-    width:15%;
-    /* height: 30px; */
+    width: 15%;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -113,8 +112,7 @@
 
 @media(max-width:770px){
     .capa {
-        height: 100%;
-        width: 35%;
+        margin: 0px 15px 0px 30px;
     }
     .oTrevo {
         font-size: 24px;
@@ -125,11 +123,11 @@
         padding-left: 20px;
         padding-right: 20px;
     }
-
+    .temasBox{
+        padding-left: 10%;
+    }
     .titulo {
         font-size: 16px;
-        padding-left: 0;
-        padding-right: 0;
     }
 
     .cardJornal{
@@ -153,11 +151,6 @@
         padding-right: 20px;
     }
 
-    .titulo {
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-
     .cardJornal{
         width:100%;
     }
@@ -165,6 +158,10 @@
     .textoIntroducao{
         padding-left: 0px;
         padding-right: 0px;
+    }
+    
+    .edicoesJornal{
+        padding-top: 20px;
     }
 
 }
