react parser tabelas historia

--- a/client/src/components/Backoffice/Journal/Journal.css
+++ b/client/src/components/Backoffice/Journal/Journal.css
@@ -156,6 +156,7 @@
   .DraftEditor-editorContainer {
     padding: 0px 10px;
     width: 100%;
+    word-break: break-word;
   }
   
   @media(max-width: 768px) {
